--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
 </head>
 <body>
 <h1>meu primeiro site dentro do code spaces</h1>
-    estou codando diremante do code spaces.
-    show    
+    estou dando manutenção no meu site atraves do meu ipad   
 </body>
 </html>
