--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
   </head>
   <body>
     <h1>meu primeiro site dentro do code spaces</h1>
-    estou dando manutenção no meu site atraves do meu ipad
+  Bora fazer pela internet
   </body>
 </html>
